--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>GitHub</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde excepturi
+      architecto aut illo, eveniet blanditiis fugit optio expedita placeat qui.
+    </p>
   </body>
 </html>
