added more tags

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde excepturi
       architecto aut illo, eveniet blanditiis fugit optio expedita placeat qui.
     </p>
+
+    <h2>JS 22</h2>
+    <h3>Lorem ipsum dolor sit amet.</h3>
   </body>
 </html>
