--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <h1>GitHub</h1>
     <p>Hello,guys it's me Mario</p>
+    <img
+      src="https://i.ytimg.com/vi/p94QPaI4SxE/mqdefault.jpg"
+      alt=""
+      width="30%"
+    />
   </body>
 </html>
