--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>GitHub</h1>
     <p>Hello,guys it's me Mario</p>
     <img
-      src="https://i.ytimg.com/vi/p94QPaI4SxE/mqdefault.jpg"
+      src="https://c.tenor.com/Xl5AoPPfQbIAAAAd/%D0%BF%D0%B0%D0%BF%D0%B8%D1%87-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B0%D0%B9%D1%88%D0%B8%D0%B9.gif"
       alt=""
       width="30%"
     />
