--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -91,11 +91,13 @@
     <h3>Lorem ipsum dolor sit amet.</h3>
 
     <p>Hello,guys it's me Mario</p>
-    <img
-      src="https://c.tenor.com/Xl5AoPPfQbIAAAAd/%D0%BF%D0%B0%D0%BF%D0%B8%D1%87-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B0%D0%B9%D1%88%D0%B8%D0%B9.gif"
-      alt=""
-      width="30%"
-    />
+    <div class="pap">
+      <img
+        src="https://c.tenor.com/Xl5AoPPfQbIAAAAd/%D0%BF%D0%B0%D0%BF%D0%B8%D1%87-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B0%D0%B9%D1%88%D0%B8%D0%B9.gif"
+        alt=""
+        width="50%"
+      />
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
