--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 
     <h2>JS 22</h2>
     <h3>Lorem ipsum dolor sit amet.</h3>
+    <footer>
+      <div class="footer1">
+        Lorem, ipsum dolor.
+        <style background-color: black></style>
+      </div>
+    </footer>
   </body>
 </html>
