--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,5 +16,20 @@
 
     <h2>JS 22</h2>
     <h3>Lorem ipsum dolor sit amet.</h3>
+
+    <section3 class="s3">
+      <div class="gifff">
+        <img
+          src="./img/c0ef1b70738d7112846d170dc5fbcfac_w200.gif"
+          alt=""
+          width="400px"
+        />
+        <img
+          src="./img/thanos-twerk-twerking-gauntlet-clap-cheeks-thanos.gif"
+          alt=""
+        />
+        <img src="./img/5UbT.gif" alt="" width="700px" />
+      </div>
+    </section3>
   </body>
 </html>
