--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <nav style="background-color: aqua">navbar</nav>
+    </div>
     <h1>GitHub</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde excepturi
